--- a/.github/workflows/ci-deploy.yml
+++ b/.github/workflows/ci-deploy.yml
@@ -17,10 +17,22 @@ jobs:
           node-version: 20
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
+
+      # ❌ 의도적 실패 지점
+      - name: Intentional failure
+        run: npm run not-exist
 
       - name: Build project
         run: npm run build
 
       - name: Run tests
         run: npm test
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    if: ${{ success() }}
+    steps:
+      - name: Mock deployment
+        run: echo "🚀 Deploying to staging environment..."
